[package]
name = "probe-rs-rtt"
description = "Host side implementation of the RTT (Real-Time Transfer) I/O protocol over probe-rs"
version = "0.1.0"
edition = "2018"
readme = "README.md"
keywords = ["no-std", "embedded", "debugging", "rtt"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/mvirkkunen/probe-rs-rtt"

[dependencies]
probe-rs = "0.6.0"
scroll = "0.10.1"
thiserror = "1.0.11"
