[package]
name = "probe-rs-rtt"
description = "Host side implementation of the RTT (Real-Time Transfer) I/O protocol over probe-rs"
version = "0.11.0"
edition = "2018"
readme = "../README.md"
keywords = ["embedded", "debugging", "rtt"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/probe-rs/probe-rs-rtt"

[dependencies]
log = "0.4.8"
probe-rs = { version = "0.11.0", git = "https://github.com/probe-rs/probe-rs" }
scroll = "0.10.1"
thiserror = "1.0.11"
trace-mutex = { git = "https://github.com/jamesmunns/trace-mutex", rev = "6f5a95406d65c0280981503fb7f78a9265aced04" }
