[package]
name = "rtthost"
version = "0.11.0"
edition = "2018"
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]

[dependencies]
pretty_env_logger = "0.4.0"
probe-rs = { version = "0.11.0", git = "https://github.com/probe-rs/probe-rs" }
probe-rs-rtt = { version = "0.11.0", path = "../probe-rs-rtt" }
structopt = "0.3.11"
trace-mutex = { git = "https://github.com/jamesmunns/trace-mutex", rev = "6f5a95406d65c0280981503fb7f78a9265aced04" }

[features]
nightly_trace = ["trace-mutex/1_46_0"]
